# AIL7Manager

./: .gitignore  .replit  config.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
api/routers/: dashboard.py  evidence.py  ksbs.py
api/schemas/: evidence_schemas.py  ksb_schemas.py
attached_assets/: project_requirements.md
database/models/: postgres_models.py  test_postgres_models.py
ksbs/: b1.desc.md  b2.desc.md  b3.desc.md  b4.desc.md  b5.desc.md  b6.desc.md  b7.desc.md  b8.desc.md  k1.desc.md  k10.desc.md  k11.desc.md  k12.desc.md  k13.desc.md  k14.desc.md  k15.desc.md  k16.desc.md  k17.desc.md  k18.desc.md  k19.desc.md  k2.desc.md  k20.desc.md  k21.desc.md  k22.desc.md  k23.desc.md  k24.desc.md  k25.desc.md  k26.desc.md  k27.desc.md  k28.desc.md  k29.desc.md  k3.desc.md  k4.desc.md  k5.desc.md  k6.desc.md  k7.desc.md  k8.desc.md  k9.desc.md  s1.desc.md  s10.desc.md  s11.desc.md  (+25 more)
scripts/: import_ksbs.py  ksbtext2markdown.py
